# GeneChat

./: .gitignore  README.md  demo.sh  environment.yml  eval.py  eval_generate.py  finetune.sh  fix_dnabert2.py  gcu_device.py  gcu_xpu.py  inference_all.py  pyproject.toml  run_eval_cuda.sh  run_eval_xpu.sh  run_train.sh  run_train_cuda.sh  run_train_xpu.sh  test_dryrun.py  train_esm.py  train_minimal.py  train_unsloth.py  xpu_test.py
configs/: genechat_eval.yaml  genechat_eval_2.yaml  genechat_stage1.yaml  genechat_stage2.yaml  genechat_stage3.yaml  genechat_unsloth_stage2.yaml  proteinchat_eval.yaml  proteinchat_stage1.yaml
genechat/: __init__.py
genechat/common/: config.py  conversation.py  device.py  dist_utils.py  logger.py  optims.py  registry.py  utils.py
genechat/datasets/: data_utils.py
genechat/datasets/builders/: __init__.py  base_dataset_builder.py  seq_text_pair_builder.py
genechat/datasets/datasets/: dataloader_utils.py  seq_dataset.py
genechat/models/: __init__.py  base_model.py  blip2.py  gene_encoder.py  genechat.py  genechat_unsloth.py
genechat/models/other_models/: proteinchat-glm.py  proteinchat-mlp.py
genechat/runners/: __init__.py  runner_base.py  runner_iter.py
genechat/tasks/: __init__.py  base_task.py  protein_text_pretrain.py
scripts/: comparing_summaries.py  eval_generate.py  log_k_steps.py  score_predictions.py  test_dryrun.py  train_esm.py  train_unsloth.py
xpu/: __init__.py  benchmark.py  patches.py  test_patches.py
